src/main/java/jugglinglab/notation/ssparser/SiteswapParser.java
/* Generated By:JavaCC: Do not edit this line. SiteswapParser.java */
package jugglinglab.notation.ssparser;

// This file is part of Juggling Lab.  It was automatically generated by JavaCC
// from the grammar file "SiteswapParser.jj".
//
// DO NOT EDIT THIS FILE DIRECTLY, AS YOUR CHANGES WILL LIKELY BE OVERWRITTEN
@SuppressWarnings("unused")

public class SiteswapParser implements SiteswapParserConstants {
        private static int jugglers;
        private static int current_juggler;
        private static int current_beat;
        private static int current_beat_sub;

        public static SiteswapTreeItem parsePattern(String pat) throws ParseException {
                java.io.StringReader sr = new java.io.StringReader(pat);
                java.io.Reader r = new java.io.BufferedReader(sr);
                SiteswapParser parser = new SiteswapParser(r);
                jugglers = -1;
                return (parser.MakeTree());
        }

        // For test purposes
        public static void main(String args[]) throws ParseException {
                String in = args[0];
                System.out.println("parsing pattern: "+in);
                System.out.println(parsePattern(in));
        }

  final public SiteswapTreeItem MakeTree() throws ParseException {
  SiteswapTreeItem b;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case SPC:
      jj_consume_token(SPC);
      break;
    default:
      jj_la1[0] = jj_gen;
      ;
    }
    b = Pattern();
    jj_consume_token(0);
          {if (true) return b;}
    throw new Error("Missing return statement in function");
  }

  final public SiteswapTreeItem Pattern() throws ParseException {
  SiteswapTreeItem b, c; int n;
          b = new SiteswapTreeItem(SiteswapTreeItem.TYPE_PATTERN);
    label_1:
    while (true) {
      if (jj_2_1(2147483647)) {
        c = GroupedPattern();
      } else {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case NUM:
        case LET:
        case 9:
        case 14:
        case 16:
        case 18:
        case 19:
        case 21:
        case 22:
          c = SoloSequence();
          break;
        case 23:
          c = PassingSequence();
          break;
        case 26:
          n = Wildcard();
                                        c = new SiteswapTreeItem(SiteswapTreeItem.TYPE_WILDCARD);
                                        c.beats = n;
          break;
        default:
          jj_la1[1] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
                  b.addChild(c);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case NUM:
      case LET:
      case 9:
      case 14:
      case 16:
      case 18:
      case 19:
      case 21:
      case 22:
      case 23:
      case 26:
        ;
        break;
      default:
        jj_la1[2] = jj_gen;
        break label_1;
      }
    }
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 8:
      jj_consume_token(8);
                  b.switchrepeat = true;
      break;
    default:
      jj_la1[3] = jj_gen;
      ;
    }
                b.jugglers = jugglers;
                {if (true) return b;}
    throw new Error("Missing return statement in function");
  }

  final public SiteswapTreeItem GroupedPattern() throws ParseException {
  SiteswapTreeItem b, c; int n;
          b = new SiteswapTreeItem(SiteswapTreeItem.TYPE_GROUPED_PATTERN);
    jj_consume_token(9);
    c = Pattern();
                        b.addChild(c);
                        b.repeats = 1;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 10:
      jj_consume_token(10);
      n = Number();
                  b.repeats = n;
      break;
    default:
      jj_la1[4] = jj_gen;
      ;
    }
    jj_consume_token(11);
          {if (true) return b;}
    throw new Error("Missing return statement in function");
  }

  final public SiteswapTreeItem SoloSequence() throws ParseException {
  SiteswapTreeItem b, c; Token s=null;
                b = new SiteswapTreeItem(SiteswapTreeItem.TYPE_SOLO_SEQUENCE);
                current_juggler = 1;
                current_beat = 0;
    label_2:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case NUM:
      case LET:
      case 14:
      case 16:
      case 18:
      case 19:
        c = SoloMultiThrow();
                                        current_beat++;
                                        b.addChild(c);
        break;
      case 9:
        c = SoloPairedThrow();
                                  current_beat += 2;
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case 12:
          jj_consume_token(12);
                                  current_beat--;
          break;
        default:
          jj_la1[5] = jj_gen;
          ;
        }
                                  b.addChild(c);
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case SPC:
          jj_consume_token(SPC);
          break;
        default:
          jj_la1[6] = jj_gen;
          ;
        }
        break;
      case 21:
      case 22:
        c = SoloHandSpecifier();
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case SPC:
          jj_consume_token(SPC);
          break;
        default:
          jj_la1[7] = jj_gen;
          ;
        }
                                  b.addChild(c);
        break;
      default:
        jj_la1[8] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      if (jj_2_2(2147483647)) {
        ;
      } else {
        break label_2;
      }
    }
                if (jugglers == -1)
                        jugglers = 1;
                else if (jugglers != 1) {
                        {if (true) throw new ParseException("Inconsistent number of jugglers");}
                }
                b.source_juggler = 1;
                b.beats = current_beat;
                {if (true) return b;}
    throw new Error("Missing return statement in function");
  }

  final public SiteswapTreeItem SoloPairedThrow() throws ParseException {
  SiteswapTreeItem b, c;
          b = new SiteswapTreeItem(SiteswapTreeItem.TYPE_SOLO_PAIRED_THROW);
    jj_consume_token(9);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case SPC:
      jj_consume_token(SPC);
      break;
    default:
      jj_la1[9] = jj_gen;
      ;
    }
    c = SoloMultiThrow();
                  b.addChild(c);
    jj_consume_token(13);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case SPC:
      jj_consume_token(SPC);
      break;
    default:
      jj_la1[10] = jj_gen;
      ;
    }
    c = SoloMultiThrow();
                  b.addChild(c);
    jj_consume_token(11);
                b.source_juggler = 1;
                b.seq_beatnum = current_beat;
                {if (true) return b;}
    throw new Error("Missing return statement in function");
  }

  final public SiteswapTreeItem SoloMultiThrow() throws ParseException {
  SiteswapTreeItem b, c;
          b = new SiteswapTreeItem(SiteswapTreeItem.TYPE_SOLO_MULTI_THROW);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case NUM:
    case LET:
    case 18:
    case 19:
      c = SoloSingleThrow();
                          b.addChild(c);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case SPC:
        jj_consume_token(SPC);
        break;
      default:
        jj_la1[11] = jj_gen;
        ;
      }
      break;
    case 14:
      jj_consume_token(14);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case SPC:
        jj_consume_token(SPC);
        break;
      default:
        jj_la1[12] = jj_gen;
        ;
      }
      label_3:
      while (true) {
        c = SoloSingleThrow();
                                  b.addChild(c);
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case SPC:
          jj_consume_token(SPC);
          break;
        default:
          jj_la1[13] = jj_gen;
          ;
        }
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case NUM:
        case LET:
        case 18:
        case 19:
          ;
          break;
        default:
          jj_la1[14] = jj_gen;
          break label_3;
        }
      }
      jj_consume_token(15);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case SPC:
        jj_consume_token(SPC);
        break;
      default:
        jj_la1[15] = jj_gen;
        ;
      }
      break;
    case 16:
      jj_consume_token(16);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case SPC:
        jj_consume_token(SPC);
        break;
      default:
        jj_la1[16] = jj_gen;
        ;
      }
      label_4:
      while (true) {
        c = SoloSingleThrow();
                                  b.addChild(c);
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case SPC:
          jj_consume_token(SPC);
          break;
        default:
          jj_la1[17] = jj_gen;
          ;
        }
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case NUM:
        case LET:
        case 18:
        case 19:
          ;
          break;
        default:
          jj_la1[18] = jj_gen;
          break label_4;
        }
      }
      jj_consume_token(17);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case SPC:
        jj_consume_token(SPC);
        break;
      default:
        jj_la1[19] = jj_gen;
        ;
      }
      break;
    default:
      jj_la1[20] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
                b.source_juggler = 1;
                b.seq_beatnum = current_beat;
                {if (true) return b;}
    throw new Error("Missing return statement in function");
  }

  final public SiteswapTreeItem SoloSingleThrow() throws ParseException {
  SiteswapTreeItem b; Token t; String mod;
          b = new SiteswapTreeItem(SiteswapTreeItem.TYPE_SOLO_SINGLE_THROW);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case NUM:
      t = jj_consume_token(NUM);
                                  b.value = Character.digit((t.image.toCharArray())[0], 36);
      break;
    case LET:
      t = jj_consume_token(LET);
                                  b.value = Character.digit((t.image.toCharArray())[0], 36);
      break;
    case 18:
      jj_consume_token(18);
                                  b.value = 25;
      break;
    case 19:
      jj_consume_token(19);
                                  b.value = 33;
      break;
    default:
      jj_la1[21] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 19:
      jj_consume_token(19);
                          b.x = true;
      break;
    default:
      jj_la1[22] = jj_gen;
      ;
    }
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case MOD:
      mod = Modifier();
                          b.mod = mod;
      break;
    default:
      jj_la1[23] = jj_gen;
      ;
    }
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 20:
      jj_consume_token(20);
      break;
    default:
      jj_la1[24] = jj_gen;
      ;
    }
                b.source_juggler = 1;
                b.dest_juggler = 1;
                b.seq_beatnum = current_beat;
                {if (true) return b;}
    throw new Error("Missing return statement in function");
  }

  final public SiteswapTreeItem SoloHandSpecifier() throws ParseException {
  SiteswapTreeItem b;
          b = new SiteswapTreeItem(SiteswapTreeItem.TYPE_HAND_SPEC);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 21:
      jj_consume_token(21);
                          b.spec_left = false;
      break;
    case 22:
      jj_consume_token(22);
                          b.spec_left = true;
      break;
    default:
      jj_la1[25] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
                b.source_juggler = 1;
                b.seq_beatnum = current_beat;
                {if (true) return b;}
    throw new Error("Missing return statement in function");
  }

  final public SiteswapTreeItem PassingSequence() throws ParseException {
  SiteswapTreeItem b, c;
                b = new SiteswapTreeItem(SiteswapTreeItem.TYPE_PASSING_SEQUENCE);
                current_beat = 0;
    label_5:
    while (true) {
      c = PassingGroup();
                                b.jugglers = c.jugglers;
                                b.addChild(c);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 23:
        ;
        break;
      default:
        jj_la1[26] = jj_gen;
        break label_5;
      }
    }
                b.beats = current_beat;
                {if (true) return b;}
    throw new Error("Missing return statement in function");
  }

  final public SiteswapTreeItem PassingGroup() throws ParseException {
  SiteswapTreeItem b, c;
                b = new SiteswapTreeItem(SiteswapTreeItem.TYPE_PASSING_GROUP);
                current_juggler = 1;
    jj_consume_token(23);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case SPC:
      jj_consume_token(SPC);
      break;
    default:
      jj_la1[27] = jj_gen;
      ;
    }
    c = PassingThrows();
                        b.beats = c.beats;
                        b.addChild(c);
                        current_juggler++;
    label_6:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 24:
        ;
        break;
      default:
        jj_la1[28] = jj_gen;
        break label_6;
      }
      jj_consume_token(24);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case SPC:
        jj_consume_token(SPC);
        break;
      default:
        jj_la1[29] = jj_gen;
        ;
      }
      c = PassingThrows();
                                if (c.beats != b.beats) {
                                        {if (true) throw new ParseException("Inconsistent number of beats between jugglers");}
                                }
                                b.addChild(c);
                                current_juggler++;
    }
    jj_consume_token(25);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case SPC:
      jj_consume_token(SPC);
      break;
    default:
      jj_la1[30] = jj_gen;
      ;
    }
                b.jugglers = current_juggler - 1;
                if (jugglers == -1)
                        jugglers = b.jugglers;
                else if (b.jugglers != jugglers) {
                        {if (true) throw new ParseException("Inconsistent number of jugglers");}
                }
                b.seq_beatnum = current_beat;
                current_beat += b.beats;
                {if (true) return b;}
    throw new Error("Missing return statement in function");
  }

  final public SiteswapTreeItem PassingThrows() throws ParseException {
  SiteswapTreeItem b, c;
                b = new SiteswapTreeItem(SiteswapTreeItem.TYPE_PASSING_THROWS);
                current_beat_sub = 0;
    label_7:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case NUM:
      case LET:
      case 14:
      case 16:
      case 18:
      case 19:
        c = PassingMultiThrow();
                                        current_beat_sub++;
                                        b.addChild(c);
        break;
      case 9:
        c = PassingPairedThrow();
                                  current_beat_sub += 2;
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case 12:
          jj_consume_token(12);
                                  current_beat_sub--;
          break;
        default:
          jj_la1[31] = jj_gen;
          ;
        }
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case SPC:
          jj_consume_token(SPC);
          break;
        default:
          jj_la1[32] = jj_gen;
          ;
        }
                                  b.addChild(c);
        break;
      case 21:
      case 22:
        c = PassingHandSpecifier();
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case SPC:
          jj_consume_token(SPC);
          break;
        default:
          jj_la1[33] = jj_gen;
          ;
        }
                                  b.addChild(c);
        break;
      default:
        jj_la1[34] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      if (jj_2_3(2147483647)) {
        ;
      } else {
        break label_7;
      }
    }
                b.source_juggler = current_juggler;
                b.beats = current_beat_sub;
                b.seq_beatnum = current_beat;
                {if (true) return b;}
    throw new Error("Missing return statement in function");
  }

  final public SiteswapTreeItem PassingPairedThrow() throws ParseException {
  SiteswapTreeItem b, c;
          b = new SiteswapTreeItem(SiteswapTreeItem.TYPE_PASSING_PAIRED_THROW);
    jj_consume_token(9);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case SPC:
      jj_consume_token(SPC);
      break;
    default:
      jj_la1[35] = jj_gen;
      ;
    }
    c = PassingMultiThrow();
                  b.addChild(c);
    jj_consume_token(13);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case SPC:
      jj_consume_token(SPC);
      break;
    default:
      jj_la1[36] = jj_gen;
      ;
    }
    c = PassingMultiThrow();
                  b.addChild(c);
    jj_consume_token(11);
                b.source_juggler = current_juggler;
                b.seq_beatnum = current_beat + current_beat_sub;
                {if (true) return b;}
    throw new Error("Missing return statement in function");
  }

  final public SiteswapTreeItem PassingMultiThrow() throws ParseException {
  SiteswapTreeItem b, c;
          b = new SiteswapTreeItem(SiteswapTreeItem.TYPE_PASSING_MULTI_THROW);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case NUM:
    case LET:
    case 18:
    case 19:
      c = PassingSingleThrow();
                          b.addChild(c);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case SPC:
        jj_consume_token(SPC);
        break;
      default:
        jj_la1[37] = jj_gen;
        ;
      }
      break;
    case 14:
      jj_consume_token(14);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case SPC:
        jj_consume_token(SPC);
        break;
      default:
        jj_la1[38] = jj_gen;
        ;
      }
      label_8:
      while (true) {
        c = PassingSingleThrow();
                                  b.addChild(c);
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case SPC:
          jj_consume_token(SPC);
          break;
        default:
          jj_la1[39] = jj_gen;
          ;
        }
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case NUM:
        case LET:
        case 18:
        case 19:
          ;
          break;
        default:
          jj_la1[40] = jj_gen;
          break label_8;
        }
      }
      jj_consume_token(15);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case SPC:
        jj_consume_token(SPC);
        break;
      default:
        jj_la1[41] = jj_gen;
        ;
      }
      break;
    case 16:
      jj_consume_token(16);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case SPC:
        jj_consume_token(SPC);
        break;
      default:
        jj_la1[42] = jj_gen;
        ;
      }
      label_9:
      while (true) {
        c = PassingSingleThrow();
                                  b.addChild(c);
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case SPC:
          jj_consume_token(SPC);
          break;
        default:
          jj_la1[43] = jj_gen;
          ;
        }
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case NUM:
        case LET:
        case 18:
        case 19:
          ;
          break;
        default:
          jj_la1[44] = jj_gen;
          break label_9;
        }
      }
      jj_consume_token(17);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case SPC:
        jj_consume_token(SPC);
        break;
      default:
        jj_la1[45] = jj_gen;
        ;
      }
      break;
    default:
      jj_la1[46] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
                b.source_juggler = current_juggler;
                b.seq_beatnum = current_beat + current_beat_sub;
                {if (true) return b;}
    throw new Error("Missing return statement in function");
  }
